# feature-circuit-discovery

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
datasets/ioi/: ioi_test_100_2.json
datasets/neuronpedia/: download_explanations.sh
datasets/neuronpedia/explanations/: gemma-2-2b_0-gemmascope-res-16k.json  gemma-2-2b_1-gemmascope-res-16k.json  gemma-2-2b_10-gemmascope-res-16k.json  gemma-2-2b_11-gemmascope-res-16k.json  (+21 more)
experiments/: Interactive-1.interactive  bench_mps.py  causal_validation.py  causal_validation_addition.py  check_overlap.py  debug_grad_chain.py  duplicate_feature_elimination.py  feature_grad_exp.py  feature_grad_exp_optimized.py  feature_visualisation.py  make_graph.py  quick_grad_test.py  run_addition_gemma2_2b.py  run_and_export.py  run_comparison_gemma2_2b.py  run_contrastive_quick.py  run_ioi_gemma2_2b.py  run_original_test.py  subtract_indirect.py  tiny_grad_test.py  tiny_grad_test2.py  verify_index_bug.py
feature_circuit_discovery/: core.py  data.py  export.py  graphs.py  sae_funcs.py
feature_circuit_discovery/utils/: misc.py
results/: circuit_20260209_222259.html  circuit_20260209_222259.json  circuit_20260209_224335.html  circuit_20260209_224335.json  circuit_20260210_121414_direct_d2.html  circuit_20260210_121414_direct_d2.json  circuit_export_2026-02-25_19_00_34.json  circuit_quick_20260223_180956.html  circuit_quick_20260223_180956.json  visualizer.html
test/: test_feature_grad.py
tests/: test_gradient_correctness.py  test_jacobian_vs_loop.py
